[workspace]
members = [ "macros" ]

[package]
name = "keyseq"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Shane Celis <shane.celis@gmail.com>"]
keywords = [
    "keyboard",
    "bevy",
    "winit",
    "input",
    "hotkey",
    "cheat-code",
    "key-sequence"
]
categories = [
    "input",
    "gui"
]
repository = "https://github.com/shanecelis/keyseq"
readme = "README.md"
[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["strict-order"]
winit = ["dep:winit", "keyseq_macros/winit"]
bevy = ["dep:bevy", "keyseq_macros/bevy", "bevy/bevy_winit"]
strict-order = ["keyseq_macros/strict-order"]
poor = ["keyseq_macros/poor"]

[dependencies]
keyseq_macros = { version = "0.1.0", path = "macros" }
bevy = { version = "0.12.1", default-features = false, optional = true }
winit = { version = "0.29.10", default-features = false, optional = true }
bitflags = "2.4.2"

[dev-dependencies]
bevy = { version = "0.12.1", default-features = true }
