[workspace]
members = [ "macros" ]

[package]
name = "keyseq"
description = "Specify key chords using `ctrl-A` short-hand"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Shane Celis <shane.celis@gmail.com>"]
keywords = [
    "keyboard",
    "bevy",
    "winit",
    "hotkey",
]
categories = [
    "gui"
]
repository = "https://github.com/shanecelis/keyseq"
readme = "README.md"
[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["strict-order"]
winit = ["dep:winit", "keyseq_macros/winit"]
bevy = ["dep:bevy", "dep:bevy_reflect", "keyseq_macros/bevy", "bevy/bevy_winit"]
strict-order = ["keyseq_macros/strict-order"]
poor = ["keyseq_macros/poor"]

[dependencies]
keyseq_macros = { version = "0.2.2", path = "macros" }
bevy = { version = "0.14", default-features = false, optional = true }
bevy_reflect = { version = "0.14", optional = true }
winit = { version = "0.29.10", default-features = false, optional = true }
bitflags = "2.4.2"

[dev-dependencies]
bevy = { version = "0.14", default-features = true }
version-sync = "0.9"

[[example]]
name = "winit"
required-features = ["winit"]

[[example]]
name = "bevy"
required-features = ["bevy"]
