[package]
name = "keyseq_macros"
description = "Specify key chords using `Ctrl-A` short-hand macros"
version = "0.3.1"
edition = "2021"
authors = ["Shane Celis <shane.celis@gmail.com>"]
keywords = [
    "keyboard",
    "bevy",
    "winit",
    "hotkey",
]
categories = [
    "gui"
]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/shanecelis/keyseq"

[lib]
proc-macro = true

[features]
default = ["strict-order"]
winit = []
poor = []
bevy = []
strict-order = []
permit-plus = []

[dependencies]
proc-macro-error = { version = "1.0.4", default-features = false }
proc-macro2 = "1.0.69"
quote = "1.0"
version-sync = "0.9"

# [dev-dependencies]
# winit = { version = "0.29.10", optional = false }
# bevy = { version = "0.12.1", default-features = false }
